syntax = "proto3";

import "scalapb/scalapb.proto";

option (scalapb.options) = {
  no_default_values_in_constructor: true
  package_name: "io.iohk.atala.iris.proto"
};

message PublicKeyJwk {
  enum Curve {
    CURVE_SECP256K1_UNSPECIFIED = 0;
  }
  message ECKeyData {
    Curve curve = 1; // The curve name, like secp256k1.
    bytes x = 2; // The x coordinate, represented as bytes.
    bytes y = 3; // The y coordinate, represented as bytes.
  }

  oneof key {
    ECKeyData ec_key = 1;
  }
}

message DocumentDefinition {
  message PublicKey {
    string id = 1;

    PublicKeyJwk jwk = 2;

    enum Purpose {
      PURPOSE_AUTHENTICATION_UNSPECIFIED = 0;
      PURPOSE_KEY_AGREEMENT = 1;
      PURPOSE_ASSERTION_METHOD = 2;
      PURPOSE_CAPABILITY_INVOCATION = 3;
    }
    repeated Purpose purposes = 3;
  }

  message Service {
    string id = 1;
    enum Type {
      TYPE_MEDIATOR_SERVICE_UNSPECIFIED = 0;
    }
    Type type = 2;
    string service_endpoint = 3;
  }

  repeated PublicKey public_keys = 1;
  repeated Service services = 2;
}

message CreateDid {
  bytes initial_update_commitment = 1;
  bytes initial_recovery_commitment = 2;
  string ledger = 3;
  DocumentDefinition document = 4;
}

message UpdateDid {
  message Patch {
    oneof patch {
      DocumentDefinition.PublicKey add_public_key = 1;
      string remove_public_key = 2;
      DocumentDefinition.Service add_service = 3;
      string remove_service = 4;
    }
  }

  string did = 1;
  string ledger = 2;
  bytes revealed_update_key = 3;
  bytes previous_version = 4;
  bytes forward_update_commitment = 5;
  repeated Patch patches = 6;
  bytes signature = 7;
}

message RecoverDid {
  string did = 1;
  string ledger = 2;
  bytes revealed_recovery_key = 3;
  bytes previous_version = 4;
  bytes forward_update_commitment = 5;
  bytes forward_recovery_commitment = 6;
  repeated DocumentDefinition documents = 7;
  bytes signature = 8;
}

message DeactivateDid {
  string did = 1;
  string ledger = 2;
  bytes revealed_recovery_key = 3;
  bytes previous_version = 4;
  bytes signature = 5;
}
